--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -25,7 +25,9 @@
     "react-scripts": "^2.1.8",
     "react-select": "^3.0.8",
     "react-tabs": "^3.1.0",
+    "react-zoom-slider": "^0.1.0",
     "redux": "^4.0.5",
+    "sweetalert2": "^9.17.1",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
