--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "galle_it",
   "version": "0.1.0",
-  "homepage": "https://jasz.synotec.lk",
+  "homepage": "https://dewendra.com",
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.12.0",
